test_scores/negative_dimers/features/Q71SY5.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q71SY5.pkl.xz